Fix edge case overflow on media screens

--- a/src/scripts/components/media-screen/media-screen.scss
+++ b/src/scripts/components/media-screen/media-screen.scss
@@ -8,6 +8,7 @@
   flex-direction: column;
   height: 100%;
   left: 0;
+  overflow-wrap: anywhere;
   padding: 1rem 0 3rem 0;
   position: relative;
   top: 0;
